try to speedup windows

--- a/.github/workflows/build-cross-platform.yml
+++ b/.github/workflows/build-cross-platform.yml
@@ -23,16 +23,12 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Restore vcpkg cache (Windows only)
+    - name: Setup vcpkg and dependencies (Windows only)
       if: runner.os == 'Windows'
-      uses: actions/cache@v4
+      uses: lukka/run-vcpkg@v11
       with:
-        path: |
-          vcpkg_installed
-          ~/.cache/vcpkg
-        key: vcpkg-${{ runner.os }}-${{ hashFiles('**/vcpkg.json') }}
-        restore-keys: |
-          vcpkg-${{ runner.os }}-
+        vcpkgDirectory: '${{ github.workspace }}/vcpkg'
+        runVcpkgInstall: true
 
     - name: Install GMP & MPFR
       shell: bash
@@ -49,13 +45,13 @@ jobs:
           echo "EXTRA_CXX_FLAGS=-I$BREW_PREFIX/include" >> $GITHUB_ENV
           echo "EXTRA_LINK_FLAGS=-L$BREW_PREFIX/lib" >> $GITHUB_ENV
 
-        else  # Windows
-          if [ ! -d "vcpkg" ]; then
-            git clone https://github.com/microsoft/vcpkg.git --depth 1
-          fi
-          ./vcpkg/bootstrap-vcpkg.bat
-          ./vcpkg/vcpkg install gmp mpfr --triplet x64-windows-static
-          echo "CMAKE_TOOLCHAIN_FILE=$PWD/vcpkg/scripts/buildsystems/vcpkg.cmake" >> $GITHUB_ENV
+        # else  # Windows
+        #   if [ ! -d "vcpkg" ]; then
+        #     git clone https://github.com/microsoft/vcpkg.git --depth 1
+        #   fi
+        #   ./vcpkg/bootstrap-vcpkg.bat
+        #   ./vcpkg/vcpkg install gmp mpfr --triplet x64-windows-static
+        #   echo "CMAKE_TOOLCHAIN_FILE=$PWD/vcpkg/scripts/buildsystems/vcpkg.cmake" >> $GITHUB_ENV
         fi
 
     - name: Configure CMake
